# api-gateway/cmd/api-gateway/docs/swagger.json
@@ -299,6 +299,15 @@
                         "name": "Authorization",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "description": "Box description",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/main.createBoxRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -410,6 +419,15 @@
                         "name": "Authorization",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "description": "Cell description",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/main.createCellRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -514,6 +532,15 @@
                         "name": "Authorization",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "description": "Storage description",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/main.createStorageRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -574,6 +601,17 @@
                 }
             }
         },
+        "main.createBoxRequest": {
+            "type": "object",
+            "properties": {
+                "cell_id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "main.createCellOkResponse": {
             "type": "object",
             "properties": {
@@ -588,12 +626,31 @@
                 }
             }
         },
+        "main.createCellRequest": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "storage_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "main.createStorageOkResponse": {
             "type": "object",
             "properties": {
                 "id": {
                     "type": "integer"
                 },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.createStorageRequest": {
+            "type": "object",
+            "properties": {
                 "name": {
                     "type": "string"
                 }
